--- a/pipservice-asfmm.service
+++ b/pipservice-asfmm.service
@@ -4,7 +4,7 @@ Description=ASF Members Meeting Chat
 [Service]
 Type=simple
 WorkingDirectory=/opt/asfmm/
-ExecStart=/usr/local/bin/pipenv run python3 -m hypercorn main:app
+ExecStart=/usr/local/bin/pipenv run python3 -m hypercorn main:app -b 127.0.0.1:8080
 Restart=always
 User=www-data
 Group=www-data
